[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://TrailPlane.tscn" type="PackedScene" id=2]
[ext_resource path="res://Plane.tscn" type="PackedScene" id=3]
[ext_resource path="res://Guide.tscn" type="PackedScene" id=4]
[ext_resource path="res://GuideManager.gd" type="Script" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1039.0
margin_bottom = 618.0
color = Color( 0.254902, 0.65098, 0.964706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrailPlane" parent="." instance=ExtResource( 2 )]
margin_right = 256.0
margin_bottom = 150.0

[node name="Guide Manager" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Guide" parent="Guide Manager" instance=ExtResource( 4 )]

[node name="Guide2" parent="Guide Manager" instance=ExtResource( 4 )]
position = Vector2( 443, 318 )

[node name="Plane" parent="." instance=ExtResource( 3 )]
position = Vector2( 194, 252 )
trailPane = NodePath("../TrailPlane")

[connection signal="completed" from="Guide Manager/Guide" to="Guide Manager" method="_on_guide_completed"]
[connection signal="completed" from="Guide Manager/Guide2" to="Guide Manager" method="_on_guide_completed"]
[connection signal="new_smoke" from="Plane" to="Guide Manager/Guide" method="fill"]
[connection signal="new_smoke" from="Plane" to="Guide Manager/Guide2" method="fill"]
