[gd_scene load_steps=9 format=2]

[ext_resource path="res://Plane.tscn" type="PackedScene" id=1]
[ext_resource path="res://guides/Circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://FuelGauge.tscn" type="PackedScene" id=3]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://TrailPlane.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level.gd" type="Script" id=6]
[ext_resource path="res://GuideManager.gd" type="Script" id=7]
[ext_resource path="res://Camera.gd" type="Script" id=8]

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="TrailPlane" parent="." instance=ExtResource( 5 )]
margin_left = -94.0
margin_top = -117.0
margin_right = 212.0
margin_bottom = 83.0

[node name="Guide Manager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Guide6" parent="Guide Manager" instance=ExtResource( 2 )]
position = Vector2( 66, 227 )

[node name="Guide4" parent="Guide Manager" instance=ExtResource( 2 )]
position = Vector2( 376, -105 )

[node name="Guide5" parent="Guide Manager" instance=ExtResource( 2 )]
position = Vector2( 377, 223 )

[node name="Plane" parent="." instance=ExtResource( 1 )]
position = Vector2( 194, 252 )
is_paused = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
script = ExtResource( 8 )
player = NodePath("../Plane")

[node name="Arrow" parent="." instance=ExtResource( 4 )]
position = Vector2( 50, 300 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FuelGauge" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 512.0
margin_top = 550.0
margin_right = 512.0
margin_bottom = 550.0
hidden = true

[connection signal="all_guides_completed" from="Guide Manager" to="." method="level_finished"]
[connection signal="fuel_changed" from="Plane" to="CanvasLayer/FuelGauge" method="set_value"]
[connection signal="new_smoke_point" from="Plane" to="TrailPlane" method="new_trail_point"]
[connection signal="new_smoke_point" from="Plane" to="Guide Manager" method="new_trail_point"]
[connection signal="start_smoke" from="Plane" to="TrailPlane" method="new_trail"]
